/*
 * $Id: ChangeLog,v 1.2725 2004/04/02 19:44:36 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-02 23:45 UTC+0200 Giancarlo Niccolai <antispam [at] niccolai/dot/ ws>
  * source/rtl/filesys.c
    ! Under windows with X__WIN__ on, hb_fsOpenProcess was failing
      if the file was not found in the path, but was available
      in the relative path.

  * source/rtl/hbxml.c
    % Changed memory deallocation strategy (great speedup).

  * tests/xmltest.prg
    * Fix doc strings.

  + tests/xmliter.prg
    + Added a test for xml iterators; they were in (in fact,
      they are internally used by XmlDocument class for
      findfirst/findnext operations) but documentation is
      missing; I will commit docs ASAP but this test helps
      to understand.

2004-04-03 02:55 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * utils/hbtest/rt_file.prg
    + add routine to test FError() upon "Access denied"

2004-04-02 14:00 UTC-0500 Sylvain Robert <s.robert/at/videotron.ca>
  * source/rdd/dbf1.c
    + Add Os error code to the  error object in hb_dbfCreate()
      (clipper compatibility)

2004-04-02 13:30 UTC-0500 Sylvain Robert <s.robert/at/videotron.ca>
  * source/rtl/filesys.c
    * hb_fsCreate() set the error to _doserrno if possible for MSVC

2004-04-02 20:00 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/vm/fastitem.c
    * corrected a typo that caused memory leaks

2004-04-02 09:00 UTC-0500 Sylvain Robert <s.robert/at/videotron.ca>
  * source/rtl/philes.c
    * hb_fsError() translate from 32 to 5 for MSVC in Ferror()
      (clipper compatibility)

2004-04-02 14:33 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  + xharbour/source/rtl/gtnul/gtsys.c
    + GTSYS added. It forces to link in MULTI GT mode the default
      build GT. Without it GTNUL pass all reference so smart linkers