@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2725 2004/04/02 19:44:36 andijahja Exp $
+ * $Id: ChangeLog,v 1.2726 2004/04/02 21:28:34 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-04-03 05:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * include/hbapigt.h
+  * include/hbapicdp.h
+    ! changed: "extern HB_FUNC" => "HB_FUNC_EXTERN"
 
 2004-04-02 23:45 UTC+0200 Giancarlo Niccolai <antispam [at] niccolai/dot/ ws>
   * source/rtl/filesys.c
